# malacli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: user-tests.md
pkg/aur/: PKGBUILD
pkg/homebrew/: malacli.rb  tui-bible.rb
scripts/: fetch_open_data.sh
src/: app.rs  bible.rs  config.rs  data.rs  event.rs  main.rs  note.rs  session.rs  translation.rs  tui.rs  ui.rs
