[package]
name = "malacli"
version = "0.2.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
color-eyre = "0.6"
flate2 = "1"
quick-xml = "0.38"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
flate2 = "1"

[dev-dependencies]
insta = "1"
proptest = "1"
